# re0box

./: .gitignore  Cargo.toml  README.md  build.rs  re0box.ini  re0box_uninstall.bat
.cargo/: config.toml
.github/workflows/: rust.yml
data/: message_commonmsg_chS.gmd.xdelta  message_commonmsg_chT.gmd.xdelta  message_commonmsg_eng.gmd.xdelta  message_commonmsg_fre.gmd.xdelta  message_commonmsg_ger.gmd.xdelta  message_commonmsg_ita.gmd.xdelta  message_commonmsg_jpn.gmd.xdelta  message_commonmsg_spa.gmd.xdelta
scripts/: item_box_mod.bat
src/: dinput8.rs  error.rs  game.rs  inventory.rs  lib.rs  patch.rs
