[package]
name = "re0box"
version = "0.5.0"
authors = ["descawed <re0box@descawed.com>"]
edition = "2021"
description = "An item box mod for Resident Evil 0"
readme = "README.md"
homepage = "https://www.nexusmods.com/residentevil0biohazard0hdremaster/mods/39"
repository = "https://github.com/descawed/re0box"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0"
binrw = "0.14.1"
configparser = "3.1"
log = "0.4"
memchr = "2.7.4"
simplelog = "0.12"
windows = { version = "0.59.0", features = [ "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Win32_System_SystemServices", "Win32_System_Threading" ] }

[build-dependencies]
winresource = "0.1"